@@ -12,6 +12,9 @@
   <artifactId>episteme-jni</artifactId>
   <name>episteme-jni</name>
   <url>http://maven.apache.org</url>
+  <properties>
+    <maven.compiler.release>25</maven.compiler.release>
+  </properties>
   <dependencies>
     <dependency>
       <groupId>org.episteme</groupId>
@@ -40,7 +43,6 @@
           <compilerArgs>
             <arg>--add-modules</arg>
             <arg>jdk.incubator.vector</arg>
-            <arg>--enable-preview</arg>
             <arg>-Xpkginfo:always</arg>
           </compilerArgs>
         </configuration>
@@ -49,7 +51,7 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
-          <argLine>--enable-preview --add-modules jdk.incubator.vector --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED</argLine>
+          <argLine>--add-modules jdk.incubator.vector --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED</argLine>
         </configuration>
       </plugin>
     </plugins>
